--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Drona</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
-<main class="main">
-    <header class="header">
-        <h1><a href="http://localhost:6969">Drona</a></h1>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-sucess">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/css/logo.png">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <div class="d-flex justify-content-center">
+                            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Nos drones
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><option class="dropdown-item" href="joe.html">Modèle J</option></li>
+                                <li><option class="dropdown-item" href="william.html">Modèle W</option></li>
+                                <li><option class="dropdown-item" href="averell.html">Modèle A</option></li>
+                                <li><hr class="dropdown-divider"></li>
+                            </ul>
+
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="auteur.html">A propos</a>
+                        </li>
+
+                    </ul>
+                    <div class="d-flex">
+                            <a class="nav-link active white" aria-current="page" href="inscription.html">Inscription</a>
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-dark" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+            </div>
+        </nav>
     </header>
+<main>
+
+
+
 </main>
+
+
+</body>
+
+
+<footer class="footer mt-auto py-3 bg-">
+    <div class="ontainer">
+        <span class="text-muted">Place sticky footer content here.</span>
+    </div>
+</footer>
 
 
 
 </body>
+</html>
+
 </html>
