--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Drona</title>
+    <title>Drona - Nos drones</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-sucess">
@@ -16,25 +27,36 @@
                 <a class="navbar-brand" href="#">
                     <img src="../assets/css/logo.png">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <div class="d-flex justify-content-center">
-                            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Nos drones
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><option class="dropdown-item" href="joe.html">Modèle J</option></li>
-                                <li><option class="dropdown-item" href="william.html">Modèle W</option></li>
-                                <li><option class="dropdown-item" href="averell.html">Modèle A</option></li>
-                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <option class="dropdown-item" href="joe.html">Modèle J</option>
+                                </li>
+                                <li>
+                                    <option class="dropdown-item" href="william.html">Modèle W</option>
+                                </li>
+                                <li>
+                                    <option class="dropdown-item" href="averell.html">Modèle A</option>
+                                </li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                             </ul>
 
                         </li>
@@ -44,34 +66,29 @@
 
                     </ul>
                     <div class="d-flex">
-                            <a class="nav-link active white" aria-current="page" href="inscription.html">Inscription</a>
+                        <a class="nav-link active white" aria-current="page" href="inscription.html">Inscription</a>
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-dark" type="submit">Search</button>
-                    </form>
+                        </form>
+                    </div>
                 </div>
-            </div>
             </div>
         </nav>
     </header>
-<main>
+    <main>
+
+     
+
+    </main>
 
 
-
-</main>
-
-
-</body>
-
-
-<footer class="footer mt-auto py-3 bg-">
-    <div class="ontainer">
-        <span class="text-muted">Place sticky footer content here.</span>
-    </div>
-</footer>
-
+    <footer class="footer mt-auto py-3 bg-">
+        <div class="ontainer">
+            <span class="text-muted">Place sticky footer content here.</span>
+        </div>
+    </footer>
 
 
 </body>
-</html>
 
 </html>
