--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,25 @@ header {
 .white {
     /*Pour que le lien ne soit plus "souligné"...*/
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
-footer {
+.footer {
     width: 100%;
     background: #001D36;
-    /* position: absolute; */
-    bottom: 0;
-    padding-top: 50px;
-    height: 50px;
+    padding: 1.5em 2em;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.footer i {
+    font-size: 3em;
+    color: #fff;
+    margin: 10px;
+}
+.footer i:hover {
+    cursor: pointer;
 }
