auteur and image

--- a/templates/auteur.html
+++ b/templates/auteur.html
@@ -4,23 +4,252 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="../assets/css/style.css">
+    <link href="../assets/css/auteur.css">
     <title>Drona</title>
 </head>
 
 <body>
-<div>
-    <h1>L'équipe Crea et Design</h1>
-    <img src="https://cdn.discordapp.com/attachments/805722370647392267/805754761911468073/avatar-gratuit.png"
-         height="10%" width="10%"> <br>BRUNEAU Loup<br></img>
-    <img src="https://cdn.discordapp.com/attachments/805722370647392267/805754761911468073/avatar-gratuit.png"
-         height="10%" width="10%"> bruh</img>
-    <img src="https://cdn.discordapp.com/attachments/805722370647392267/805754761911468073/avatar-gratuit.png"
-         height="10%" width="10%"> bruh</img>
-    <img src="https://cdn.discordapp.com/attachments/805722370647392267/805754761911468073/avatar-gratuit.png"
-         height="10%" width="10%"> bruh</img>
-    <img src="https://cdn.discordapp.com/attachments/805722370647392267/805754761911468073/avatar-gratuit.png"
-         height="10%" width="10%"> bruh</img>
+<div class="about-section">
+    <h1>Drona</h1>
+    <p>Drona est une entreprise spécialisé dans le transport autonome aéroporté de fourniture de tout type , courte à moyenne portée.Elle intervient à l’échèlle d'une ville entre le centre de dépôt de colis et le client. Son objectif est de fournir un service de livraison plus rapide que les moyens conventionnels. A partir d'une technologie déjà existante mais optimisée et améliorée , le service de livraison permettra de satisfaire tout types de situation. Que ce soit de la demande d'un particulier irrité par les délais de livraisons, ou l'urgence d'une entreprise cherchant à remplacer une pièce manquante, nos drones fourniront le service le plus rapide à ce jour.
+    </p>
+</div>
+
+<h2 style="text-align:center">Our Team</h2>
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/prescila.png" alt="Prescila" style="width:10%">
+            <div class="container">
+                <h2>Prescila Messerschmidt</h2>
+                <p class="title">Patron tyran</p>
+                <p>Some text </p>
+                <p>prescila@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/nans.png" alt="Nans" style="width:10%">
+            <div class="container">
+                <h2>Nans Boyer</h2>
+                <p class="title">AudioVisuel</p>
+                <p>Some text </p>
+                <p>nans@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/avatar-gratuit%20(3).png" alt="Charles" style="width:10%">
+            <div class="container">
+                <h2>Charles Fournales</h2>
+                <p class="title">AudioVisuel</p>
+                <p>Some text </p>
+                <p>charles@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/morgan.png" alt="Morgan" style="width:10%">
+            <div class="container">
+                <h2>Morgan Jamain</h2>
+                <p class="title">Animation 3D</p>
+                <p>Some text </p>
+                <p>morgan@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/elora.png" alt="Elora" style="width:10%">
+            <div class="container">
+                <h2>Elora Heilly</h2>
+                <p class="title">Animation 3D</p>
+                <p>Some text </p>
+                <p>morgan@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/charline.png" alt="Charline" style="width:10%">
+            <div class="container">
+                <h2>Charline Portal</h2>
+                <p class="title">Création Design</p>
+                <p>Some text </p>
+                <p>charline@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/aimé.png" alt="Aimé" style="width:10%">
+            <div class="container">
+                <h2>Aimé Polelei</h2>
+                <p class="title">Création Design</p>
+                <p>Some text </p>
+                <p>aimé@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/lina.png" alt="Lina" style="width:10%">
+            <div class="container">
+                <h2>Lina Rodes</h2>
+                <p class="title">Market'Com</p>
+                <p>Some text </p>
+                <p>lina@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/florian.png" alt="Florian" style="width:10%">
+            <div class="container">
+                <h2>Florian Lejosne</h2>
+                <p class="title">Informatique</p>
+                <p>Some text </p>
+                <p>florian@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/nicolas.png" alt="Nicola" style="width:10%">
+            <div class="container">
+                <h2>Nicolas Guitay</h2>
+                <p class="title">Informatique</p>
+                <p>Some text </p>
+                <p>nicolas@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/william.png" alt="William"
+                 style="width:10%">
+            <div class="container">
+                <h2>William</h2>
+                <p class="title">Informatique</p>
+                <p>Some text </p>
+                <p>william@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/loup.png" alt="Loup" style="width:10%">
+            <div class="container">
+                <h2>Loup Bruneau</h2>
+                <p class="title">Informatique</p>
+                <p>Some text </p>
+                <p>loup@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/sylvain.png" alt="Sylvain"
+                 style="width:10%">
+            <div class="container">
+                <h2>Sylvain Lespagnol</h2>
+                <p class="title">Informatique</p>
+                <p>Some text </p>
+                <p>sylvain@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../assets/css/alexandre.png" alt="Alexandre"
+                 style="width:10%">
+            <div class="container">
+                <h2>Alexandre Vernet</h2>
+                <p class="title">Informatique</p>
+                <p>Some text </p>
+                <p>alexandre@ynov.com</p>
+                <p>
+                    <button class="button">Contact</button>
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
