--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,7 +8,7 @@
 body 
 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-image: url('./bg_carte.png');
+    background-image: url('../img/bg_carte.png');
 }
 .container {
     display: flex;
