--- a/templates/auteur.html
+++ b/templates/auteur.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="../assets/css/logo.png">
+                    <img src="../assets/img/logo.png">
 
                 </a>
                 <div class="d-flex">
@@ -35,20 +35,23 @@
                             <!-- Accueil -->
                             <li class="nav-item">
                                 <div class="d-flex justify-content-center">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+                                    <a class="nav-link active" style="color: white;" aria-current="page"
+                                        href="index.html">Accueil</a>
                                 </div>
                             </li>
 
                             <!-- Nos drones -->
                             <li class="nav-item">
                                 <div class="d-flex justify-content-center">
-                                    <a class="nav-link active" aria-current="page" href="drone.html">Voir nos drones</a>
+                                    <a class="nav-link active" style="color: white;" aria-current="page"
+                                        href="drone.html">Voir nos drones</a>
                                 </div>
                             </li>
 
                             <!-- A propos -->
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="auteur.html">A propos</a>
+                                <a class="nav-link active" style="color: white;" aria-current="page"
+                                    href="auteur.html">A propos</a>
                             </li>
                         </ul>
                     </div>
@@ -59,14 +62,21 @@
 
     <div class="about">
         <h1>Drona</h1>
-        <p>Drona est une entreprise spécialisé dans le transport autonome aéroporté de fourniture de tout type , courte
-            à moyenne portée.Elle intervient à l’échèlle d'une ville entre le centre de dépôt de colis et le client. Son
-            objectif est de fournir un service de livraison plus rapide que les moyens conventionnels. A partir d'une
-            technologie déjà existante mais optimisée et améliorée , le service de livraison permettra de satisfaire
-            tout types de situation. Que ce soit de la demande d'un particulier irrité par les délais de livraisons, ou
-            l'urgence d'une entreprise cherchant à remplacer une pièce manquante, nos drones fourniront le service le
-            plus rapide à ce jour.
-        </p>
+        <div class="about-description">
+            <p>Drona est une entreprise spécialisé dans le transport autonome aéroporté de fourniture de tout type ,
+                courte
+                à moyenne portée.Elle intervient à l’échèlle d'une ville entre le centre de dépôt de colis et le client.
+                Son
+                objectif est de fournir un service de livraison plus rapide que les moyens conventionnels. A partir
+                d'une
+                technologie déjà existante mais optimisée et améliorée , le service de livraison permettra de satisfaire
+                tout types de situation. Que ce soit de la demande d'un particulier irrité par les délais de livraisons,
+                ou
+                l'urgence d'une entreprise cherchant à remplacer une pièce manquante, nos drones fourniront le service
+                le
+                plus rapide à ce jour.
+            </p>
+        </div>
     </div>
     <hr>
     <h1 style="text-align: center; margin-bottom: 50px;">Notre équipe</h1>
