--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="../assets/css/logo.png">
+                    <img src="../assets/img/logo.png">
 
                 </a>
                 <div class="d-flex">
@@ -34,20 +34,23 @@
                             <!-- Accueil -->
                             <li class="nav-item">
                                 <div class="d-flex justify-content-center">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+                                    <a class="nav-link active" style="color: white;" aria-current="page"
+                                        href="index.html">Accueil</a>
                                 </div>
                             </li>
 
                             <!-- Nos drones -->
                             <li class="nav-item">
                                 <div class="d-flex justify-content-center">
-                                    <a class="nav-link active" aria-current="page" href="drone.html">Voir nos drones</a>
+                                    <a class="nav-link active" style="color: white;" aria-current="page"
+                                        href="drone.html">Voir nos drones</a>
                                 </div>
                             </li>
 
                             <!-- A propos -->
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="auteur.html">A propos</a>
+                                <a class="nav-link active" style="color: white;" aria-current="page"
+                                    href="auteur.html">A propos</a>
                             </li>
                         </ul>
                     </div>
