[EDIT] Joe - Ajout des descriptions

--- a/templates/drone.html
+++ b/templates/drone.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Drona - Nos drones</title>
+    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/drone.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -63,7 +64,7 @@
         <div class="listCard">
             <a href="./joe.html">
                 <div class="card">
-                    <h2>Joe</h2>
+                    <h2>Modèle J</h2>
                     <p>prix</p>
                     <img src="../assets/img/drones/joe.png" alt="joe">
                     <p>Petite description</p>
@@ -71,7 +72,7 @@
             </a>
             <a href="william.html">
                 <div class="card">
-                    <h2>William</h2>
+                    <h2>Modèle W</h2>
                     <p>prix</p>
                     <img src="../assets/img/drones/william.png" alt="william">
                     <p>Petite description</p>
@@ -79,7 +80,7 @@
             </a>
             <a href="averell.html">
                 <div class="card">
-                    <h2>Averell</h2>
+                    <h2>Modèle A</h2>
                     <p>prix</p>
                     <img src="../assets/img/drones/averell.png" alt="averell">
                     <p>Petite description</p>
