--- a/templates/joe.html
+++ b/templates/joe.html
@@ -1,54 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Modèle J</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Drona - Modèle J</title>
+    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/css/joe.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 </head>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-sucess">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="../assets/css/logo.png">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <div class="d-flex justify-content-center">
-                            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Nos drones
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><option class="dropdown-item" href="joe.html">Modèle J</option></li>
-                            <li><option class="dropdown-item" href="william.html">Modèle W</option></li>
-                            <li><option class="dropdown-item" href="averell.html">Modèle A</option></li>
-                            <li><hr class="dropdown-divider"></li>
-                        </ul>
 
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="auteur.html">A propos</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-dark" type="submit">Search</button>
-                </form>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="../assets/img/logo.png">
+
+                </a>
+                <div class="d-flex">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+
+                            <!-- Accueil -->
+                            <li class="nav-item">
+                                <div class="d-flex justify-content-center">
+                                    <a class="nav-link active" style="color: white;" aria-current="page"
+                                        href="index.html">Accueil</a>
+                                </div>
+                            </li>
+
+                            <!-- Nos drones -->
+                            <li class="nav-item">
+                                <div class="d-flex justify-content-center">
+                                    <a class="nav-link active" style="color: white;" aria-current="page"
+                                        href="drone.html">Voir nos drones</a>
+                                </div>
+                            </li>
+
+                            <!-- A propos -->
+                            <li class="nav-item">
+                                <a class="nav-link active" style="color: white;" aria-current="page"
+                                    href="auteur.html">A propos</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+    <div class="container">
+        <div class="content">
+            <div class="image">
+                <img src="../assets/img/drones/joe.png" alt="joe">
+            </div>
+            <div class="text">
+                <h2>Modèle J</h2>
+                <p>Le modèle Joe peut convenir à des livraisons de petite taille. Conseillé pour le transport de
+                    plusieurs commandes de nourriture ou de colis de petite ou moyenne taille.
+                    Rapide et sûr, le modèle Joe est le plus petit de nos modèles de drones , il conserve la chaleur de
+                    vos plats.
+                </p>
+                <p>Location : 700€ / j</p>
+                <input type="button" class="btn btn-primary" value="Ajouter au panier">
             </div>
         </div>
-    </nav>
-</header>
-<body>
+    </div>
+
+    <hr>
+
+    <div class="container-fluid">
+        <h2>Description</h2>
+        <p>Poids max : 50kg</p>
+        <ul>
+            <li>Hauteur max : 500m</li>
+            <li>Taille: 50cm (L) x 50cm (l) x 70cm (h)</li>
+            <li>Vitesse: 80km/h</li>
+            <li>Autonomie : 8h</li>
+            <li>Détection : Environnement urbain</li>
+            <li>Intempéries: Vent 18 noeuds max</li>
+            <li>Niveau sonore: 10dB</li>
+            <li>Matériaux: Carbone et aluminium</li>
+            <li>Batterie: 5kg, 10kW rechargement 3h</li>
+        </ul>
+        <p>
+            Ayant un poids maximum de 50kg et une vitesse maximum avoisinant les 80 km/h, Joe peut acheminer votre
+            livraison 4 fois plus vite qu’un livreur standard.
+            Transportant votre commande à 400m du sol, Joe promet une livraison dans le respect de son écosystème et
+            sans nuisances sonores.
+            Son autonomie révolutionnaire vous permettra de livrer toute la nuit sans problème de batterie.
+            Son prix attractif s'adresse aux petites et moyennes entreprises nécessitant un service de livraison aérien.
+        </p>
+    </div>
 
 
-
-
+    <div class="footer">
+        <div class="social">
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+        </div>
+    </div>
 
 </body>
+
 </html>
