[EDIT] Joe - Buttons [ADD] William & Averell - Ajout de descriptions

--- a/templates/auteur.html
+++ b/templates/auteur.html
@@ -84,6 +84,7 @@
         <div class="ourTeamCard">
             <h2>Prescila Messerschmidt</h2>
             <p>Animation 3D</p>
+            <p>Cheffe</p>
             <img src="../assets/img/avatars/prescila.png" alt="prescila">
         </div>
         <div class="ourTeamCard">
