--- a/templates/drone.html
+++ b/templates/drone.html
@@ -65,25 +65,35 @@
             <a href="./joe.html">
                 <div class="card">
                     <h2>Modèle J</h2>
-                    <p>prix</p>
+                    <p>700€ / j</p>
                     <img src="../assets/img/drones/joe.png" alt="joe">
-                    <p>Petite description</p>
+                    <p>
+                        Le modèle Joe peut convenir à des livraisons de petite taille. Conseillé pour le transport de
+                        plusieurs commandes de nourriture ou de colis.
+                    </p>
                 </div>
             </a>
             <a href="william.html">
                 <div class="card">
                     <h2>Modèle W</h2>
-                    <p>prix</p>
+                    <p>1400€ / j</p>
                     <img src="../assets/img/drones/william.png" alt="william">
-                    <p>Petite description</p>
+                    <p>
+                        Le modèle William peut convenir à des livraisons de taille moyenne. Conseillé pour le transport
+                        de plusieurs commandes de colis de moyenne taille.
+                    </p>
                 </div>
             </a>
             <a href="averell.html">
                 <div class="card">
                     <h2>Modèle A</h2>
-                    <p>prix</p>
+                    <p>Sous devis</p>
                     <img src="../assets/img/drones/averell.png" alt="averell">
-                    <p>Petite description</p>
+                    <p>
+                        Le modèle Averell peut convenir à des livraisons de grande taille. Conseillé pour le transport
+                        d’une très grande quantité d'objets.
+
+                    </p>
                 </div>
             </a>
         </div>
