--- a/templates/joe.html
+++ b/templates/joe.html
@@ -64,10 +64,10 @@
     <div class="container">
         <div class="content">
             <div class="image">
-                <img src="../assets/img/drones/joe.png" alt="joe">
+                <video src="../assets/videos/Joe.mp4" controls poster="../assets/img/drones/joe.png"></video>
             </div>
             <div class="text">
-                <h2>Modèle J</h2>
+                <h2>Modèle Joe</h2>
                 <p>Le modèle Joe peut convenir à des livraisons de petite taille. Conseillé pour le transport de
                     plusieurs commandes de nourriture ou de colis de petite ou moyenne taille.
                     Rapide et sûr, le modèle Joe est le plus petit de nos modèles de drones , il conserve la chaleur de
@@ -83,8 +83,8 @@
 
     <div class="container-fluid">
         <h2>Description</h2>
-        <p>Poids max : 50kg</p>
         <ul>
+            <li>Poids max : 50kg</li>
             <li>Hauteur max : 500m</li>
             <li>Taille: 50cm (L) x 50cm (l) x 70cm (h)</li>
             <li>Vitesse: 80km/h</li>
@@ -95,7 +95,7 @@
             <li>Matériaux: Carbone et aluminium</li>
             <li>Batterie: 5kg, 10kW rechargement 3h</li>
         </ul>
-        <p>
+        <p style="text-align: justify;">
             Ayant un poids maximum de 50kg et une vitesse maximum avoisinant les 80 km/h, Joe peut acheminer votre
             livraison 4 fois plus vite qu’un livreur standard.
             Transportant votre commande à 400m du sol, Joe promet une livraison dans le respect de son écosystème et
