--- a/assets/css/drone.css
+++ b/assets/css/drone.css
@@ -8,9 +8,10 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-image: url('../img/bg_carte.png');
+
 }
 .container {
-    height: 90vh;
+    /* height: 90vh; */
     width: 100%;
     display: flex;
     justify-content: center;
@@ -33,7 +34,7 @@ body {
     margin: 20px;
     height: auto;
     width: 325px;
-    padding: 2em 4em;
+    padding: 2em 3em;
 }
 
 .container .card h2 {
