--- a/assets/css/joe.css
+++ b/assets/css/joe.css
@@ -7,10 +7,11 @@
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-image: url('../img/bg_carte.png');
 }
 
 .container {
-    height: 95vh;
+    margin-top: 50px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -27,12 +28,17 @@ body {
     flex-direction: row;
 }
 
-.container .content img {
-    max-width: 400px;
+.container .content img,
+.container .content video {
+    max-height: 400px;
 }
 
 .container .content p {
     font-size: 1.3em;
     width: 600px;
     text-align: justify;
+}
+.container .content input {
+    background: #62B233;
+    border: 0px solid #fff;
 }
