--- a/templates/averell.html
+++ b/templates/averell.html
@@ -1,10 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Drona - Modèle A</title>
+    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/css/joe.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 </head>
+
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="../assets/img/logo.png">
+
+                </a>
+                <div class="d-flex">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+
+                            <!-- Accueil -->
+                            <li class="nav-item">
+                                <div class="d-flex justify-content-center">
+                                    <a class="nav-link active" style="color: white;" aria-current="page"
+                                        href="index.html">Accueil</a>
+                                </div>
+                            </li>
+
+                            <!-- Nos drones -->
+                            <li class="nav-item">
+                                <div class="d-flex justify-content-center">
+                                    <a class="nav-link active" style="color: white;" aria-current="page"
+                                        href="drone.html">Voir nos drones</a>
+                                </div>
+                            </li>
+
+                            <!-- A propos -->
+                            <li class="nav-item">
+                                <a class="nav-link active" style="color: white;" aria-current="page"
+                                    href="auteur.html">A propos</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+    <div class="container">
+        <div class="content">
+            <div class="image">
+                <video src="../assets/videos/Averell.mp4" controls poster="../assets/img/drones/averell.png"></video>
+            </div>
+            <div class="text">
+                <h2>Modèle Averell</h2>
+                <p>Le modèle Averell peut convenir à des livraisons de grande taille. Conseillé pour le transport d’une
+                    grande quantité d'objets.
+                    La grande capacité de Averell permet à des entreprises de déménager à prix réduit, ou notamment à
+                    des PME dans le bâtiment d' acheminer des matériaux jusqu’au lieu de construction même difficile
+                    d’accès.
+                    Averell permet malgré son poids de faire parvenir une grande quantité de marchandise en peu de
+                    temps.
+
+
+                </p>
+                <p>Location : sous devis</p>
+                <input type="button" class="btn btn-primary" value="Ajouter au panier">
+            </div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="container-fluid">
+        <h2>Description</h2>
+        <ul>
+            <li>Poids max : 500kg</li>
+            <li>Hauteur max : de 1500 à 3000m</li>
+            <li>Taille: 170cm (L) x 150cm (l) x 2m (h)</li>
+            <li>Vitesse: 50km/h</li>
+            <li>Autonomie : 4h</li>
+            <li>Détection : Environnement urbain et périurbain</li>
+            <li>Intempéries: Vent 35 noeuds max</li>
+            <li>Niveau sonore: 50dB</li>
+            <li>Matériaux: Carbone et aluminium</li>
+            <li>Batterie: 20kg, 50kW rechargement 4h</li>
+        </ul>
+        <p style="text-align: justify;">
+            Ayant un poids maximum de 500kg et une vitesse maximale avoisinant les 50 km/h, Averell achemine votre
+            livraison dans des lieux difficiles d’accès.
+            Transportant votre commande de 1500m à 3000 m du sol, le modèle Averell promet une livraison dans le respect
+            de son écosystème et sans nuisances sonores.
+            Son prix s'adresse aux moyennes entreprises nécessitant un service de livraison aérien efficace.
+        </p>
+    </div>
+
+
+    <div class="footer">
+        <div class="social">
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+        </div>
+    </div>
 
 </body>
+
 </html>
