--- a/templates/auteur.html
+++ b/templates/auteur.html
@@ -63,14 +63,14 @@
     <div class="about">
         <h1>Drona</h1>
         <div class="about-description">
-            <p>Drona est une entreprise spécialisé dans le transport autonome aéroporté de fourniture de tout type ,
+            <p>Drona est une entreprise spécialisée dans le transport autonome aéroporté de fourniture de tout type,
                 courte
-                à moyenne portée.Elle intervient à l’échèlle d'une ville entre le centre de dépôt de colis et le client.
+                à moyenne portée. Elle intervient à l’échelle d'une ville entre le centre de dépôt de colis et le client.
                 Son
-                objectif est de fournir un service de livraison plus rapide que les moyens conventionnels. A partir
+                objectif est de fournir un service de livraison plus rapide que les moyens conventionnels. À partir
                 d'une
-                technologie déjà existante mais optimisée et améliorée , le service de livraison permettra de satisfaire
-                tout types de situation. Que ce soit de la demande d'un particulier irrité par les délais de livraisons,
+                technologie déjà existante mais optimisée et améliorée, le service de livraison permettra de satisfaire
+                tout type de situation. Que ce soit une demande d'un particulier irrité par les délais de livraisons,
                 ou
                 l'urgence d'une entreprise cherchant à remplacer une pièce manquante, nos drones fourniront le service
                 le
@@ -82,20 +82,10 @@
     <h1 style="text-align: center; margin-bottom: 50px;">Notre équipe</h1>
     <div class="ourTeam">
         <div class="ourTeamCard">
-            <h2>Prescila Messerschmidt</h2>
+            <h2>Préscila Messerschmidt</h2>
             <p>Animation 3D</p>
             <p>Cheffe</p>
             <img src="../assets/img/avatars/prescila.png" alt="prescila">
-        </div>
-        <div class="ourTeamCard">
-            <h2>Nans Boyer</h2>
-            <p>AudioVisuel</p>
-            <img src="../assets/img/avatars/nans.png" alt="nans">
-        </div>
-        <div class="ourTeamCard">
-            <h2>Charles Fournales</h2>
-            <p>AudioVisuel</p>
-            <img src="../assets/img/avatars/charles.png" alt="charles">
         </div>
         <div class="ourTeamCard">
             <h2>Morgan Jamain</h2>
@@ -106,6 +96,16 @@
             <h2>Elora Heilly</h2>
             <p>Animation 3D</p>
             <img src="../assets/img/avatars/elora.png" alt="elora">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Nans Boyer</h2>
+            <p>AudioVisuel</p>
+            <img src="../assets/img/avatars/nans.png" alt="nans">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Charles Fournales</h2>
+            <p>AudioVisuel</p>
+            <img src="../assets/img/avatars/charles.png" alt="charles">
         </div>
         <div class="ourTeamCard">
             <h2>Charline Portal</h2>
