--- a/templates/averell.html
+++ b/templates/averell.html
@@ -71,14 +71,14 @@
                 <p>Le modèle Averell peut convenir à des livraisons de grande taille. Conseillé pour le transport d’une
                     grande quantité d'objets.
                     La grande capacité de Averell permet à des entreprises de déménager à prix réduit, ou notamment à
-                    des PME dans le bâtiment d' acheminer des matériaux jusqu’au lieu de construction même difficile
+                    des PME dans le bâtiment d'acheminer des matériaux jusqu’au lieu de construction même difficile
                     d’accès.
                     Averell permet malgré son poids de faire parvenir une grande quantité de marchandise en peu de
                     temps.
 
 
                 </p>
-                <p>Location : sous devis</p>
+                <p>Location : Sous devis</p>
                 <input type="button" class="btn btn-primary" value="Ajouter au panier">
             </div>
         </div>
